# gamearch

./: CMakeLists.txt  README  globaldefs.h
include/: egg_model.h  egg_model_v2.h  mat4.h  matrix4.h  mvp_math.h  point.h  quaternion.h  sqt.h  vec2.h  vec3.h  vec4.h  vector3.h
includes/: matrix4.h  point.h  vector3.h  vector3d.h
lib/: CMakeLists.txt  includes.h
mains/: CMakeLists.txt  main.cpp
misc/: CMakeLists.txt  fast_vec.cpp  fast_vec.h  test.cpp
models/: panda-model.egg
shaders/: jointed.fs  jointed.vs  panda.fs  panda.vs  uberlight.fs  uberlight.fs.bak  uberlight.vs  uberlight.vs.bak
src/: CMakeLists.txt  hw1.cpp  hw2.cpp  hw3.cpp  hw5-2.cpp  hw5.cpp  hw6-2.cpp  hw6.cpp  includes.h  matrix.h  vector.h
top/: CMakeLists.txt
